@@ -175,6 +175,7 @@ source "package/input-tools/Config.in"
 source "package/iostat/Config.in"
 source "package/kbd/Config.in"
 source "package/lm-sensors/Config.in"
+source "package/lsuio/Config.in"
 source "package/lvm2/Config.in"
 source "package/makedevs/Config.in"
 source "package/mdadm/Config.in"
